# binaryen_sourcemap_fix

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml
testobjs/: test.wat
